--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -3,7 +3,7 @@
        {{t "links.copyright.descr"}}
     {{/external-link}}
     <span>{{t "links.copyright.descr_aux"}}</span>
-    {{#external-link href="settings.terms_url" cls="right"}}
+    {{#external-link href="settings.terms_url" class="right"}}
         {{t "links.terms.descr"}}
     {{/external-link}}
 </footer>
